--- a/airflow.cfg
+++ b/airflow.cfg
@@ -261,7 +261,7 @@ encrypt_s3_logs = False
 # Logging level.
 #
 # Supported values: ``CRITICAL``, ``ERROR``, ``WARNING``, ``INFO``, ``DEBUG``.
-logging_level = INFO
+logging_level = WARNING
 
 # Logging level for Flask-appbuilder UI.
 #
